[gd_scene load_steps=2 format=3 uid="uid://bn64hy0o130ai"]

[ext_resource type="Script" path="res://UI/Map/RangeAreaTemplate.gd" id="1_1sq13"]

[node name="RangeArea" type="Area2D"]
script = ExtResource("1_1sq13")

[node name="RangeShape" type="CollisionPolygon2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
